GNOME Bugzilla – Bug 705369
playbin: fix get-tags actions
Last modified: 2013-08-03 16:22:30 UTC
Created attachment 250733 [details] [review] playbin: check for tags on the right combiner instance The get-tags actions are not working in all cases, because the track number is used to resolve the stream combiner instead of the stream type. To reproduce just try to retrieve the video tags from a video with no audio.
Thanks! commit a8df760c960bf22d997d0b13f93f15da99d9ce90 Author: Arnaud Vrac <avrac@freebox.fr> Date: Fri Aug 2 20:08:29 2013 +0200 playbin: check for tags on the right combiner instance The get-tags actions are not working in all cases, because the track number is used to resolve the stream combiner instead of the stream type. https://bugzilla.gnome.org/show_bug.cgi?id=705369